Fixed navbar clipping

--- a/Course 1/Les 2/CSS_files/Main.css
+++ b/Course 1/Les 2/CSS_files/Main.css
@@ -23,12 +23,6 @@ body {
 
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-}
-
 .sub-menu-parent {
     position: relative;
 }
@@ -53,9 +47,10 @@ nav {
     visibility: hidden;
     position: absolute;
     width: 130%;
-    transform: translateY(-2em);
-    z-index: -1;
-    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+    transform: translateY(-10%);
+    z-index: 1;
+    transition: all 0.5s ease 0s, visibility 0s linear 0.3s, 
+        z-index 0s linear 0.01s;
     border-radius: 4px;
     opacity: 0.9;
 }
@@ -64,7 +59,7 @@ nav {
     visibility: visible;
     opacity: 1;
     z-index: 1;
-    transform: translateY(0%);
+    transform: translateY(1%);
     transition-delay: 0s, 0s, 0.5s;
 }
 
@@ -211,7 +206,7 @@ headbox {
     height: 300px;
     top: 500px;
     background-color: white;
-    animation: fadeIn 4s;
+    animation: fadeIn 6s;
     z-index: -1;
 }
 
